--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,7 +1,17 @@
 .container {
-  width: 1200px;
+  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
+
+  @media screen and (min-width: $mobile) {
+    width: $mobile;
+  }
+  @media screen and (min-width: $tablet) {
+    width: $tablet;
+  }
+  @media screen and (min-width: $desktop) {
+    width: $desktop;
+  }
 }
 
 h1,
@@ -19,6 +29,8 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+
+  width: 100%;
 }
 
 button {
