--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -8,28 +8,46 @@
 }
 
 .features {
-  padding-top: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @include desktop {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .features__list {
   display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
-.features__item:not(:last-child) {
-  margin-right: 30px;
+.features__item {
+  width: 100%;
+  @include tablet {
+    width: calc((100% - 30px) / 2);
+  }
+  @include desktop {
+    width: calc((100% - 90px) / 4);
+  }
 }
+
+// .features__item:not(:last-child) {
+//   margin-right: 30px;
+// }
 
 .features__text {
   color: var(--title-text-color);
   font-size: 14px;
   line-height: 1.71;
-  max-width: 270px;
+  // max-width: 270px;
 }
 
 .features__thumb {
   display: flex;
   background-color: #f5f4fa;
-  width: 270px;
+  // width: 270px;
   height: 120px;
   margin-bottom: 30px;
   align-items: center;
