--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,33 +1,80 @@
 .hero {
-  background-color: #c4c4c4;
-  text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-
-.hero {
   margin: auto;
-  min-height: 480px;
-  max-width: 1600px;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/hero-bcg.jpg);
+  padding-top: 118px;
+  padding-bottom: 118px;
+
+  max-width: 480px;
+  height: 400px;
+
+  background-image: var(--bcg-hero-gradient), url(../images/hero-bcg-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  background-color: #c4c4c4;
+  text-align: center;
+
+  @include desktop {
+    padding-top: 200px;
+    padding-bottom: 280px;
+    min-height: 600px;
+    max-width: 1600px;
+  }
+
+  @include retina {
+    & {
+      background-image: var(--bcg-hero-gradient),
+        url(../images/hero-bcg-mobile@2x.jpg);
+    }
+  }
+
+  @include tablet {
+    & {
+      max-width: 768px;
+      background-image: var(--bcg-hero-gradient),
+        url(../images/hero-bcg-tablet.jpg);
+      @include retina {
+        .hero {
+          background-image: var(--bcg-hero-gradient),
+            url(../images/hero-bcg-tablet@2x.jpg);
+        }
+      }
+    }
+  }
+
+  @include desktop {
+    & {
+      max-width: 1200px;
+      background-image: var(--bcg-hero-gradient),
+        url(../images/hero-bcg-desktop.jpg);
+      @include retina {
+        & {
+          background-image: var(--bcg-hero-gradient),
+            url(../images/hero-bcg-desktop@2x.jpg);
+        }
+      }
+    }
+  }
 }
 
 .hero-title {
   margin-left: auto;
   margin-right: auto;
-  max-width: 696px;
 
   color: var(--primery-white-color);
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.61;
+
   letter-spacing: 0.06em;
   text-transform: uppercase;
+
+  @include tablet {
+    width: 360px;
+  }
+  @include desktop {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
