--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -8,12 +8,17 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+
   margin-bottom: 10px;
 }
 
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @include desktop {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   background-color: var(--bg-our-team);
   &.text {
     color: var(--title-text-color);
@@ -22,21 +27,42 @@
   }
 }
 
+.team-title {
+  font-size: 28px;
+  line-height: 1.17;
+  margin-bottom: 30px;
+
+  @include desktop {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
+}
+
 .team-list {
   display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
   padding-left: 0;
 }
 
-.bcg {
-  width: 270px;
-  height: 428px;
-  left: 215px;
-  top: 1632px;
+.team-item {
+  width: 100%;
+  @include tablet {
+    width: calc((100% - 30px) / 2);
+  }
+  @include desktop {
+    width: calc((100% - 90px) / 4);
+  }
+
+  // width: 270px;
+  // height: 428px;
+  // left: 215px;
+  // top: 1632px;
   background: var(--primery-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  .team-list &:not(:last-child) {
-    margin-right: 30px;
-  }
+  // .team-list &:not(:last-child) {
+  //   margin-right: 30px;
+  // }
 }
