--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,6 +9,10 @@
   --address-footer: rgba(255, 255, 255, 0.6);
   --button-color: #188ce8;
   --button-bcg-color: #f5f4fa;
+  --bcg-hero-gradient: linear-gradient(
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+  );
 }
 
 .visually-hidden {
