--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,10 @@ body {
   text-decoration: none;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .page-header {
   width: 100%;
   border-bottom: 1px solid #ececec;
@@ -133,16 +137,27 @@ body {
 
 .site-nav {
   display: flex;
-  margin-left: 93px;
+  margin-left: 92px;
 }
 .site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.site-nav__item {
-  display: none;
+@media screen and (max-width: 767px) {
+  .site-nav__link {
+    display: none;
+  }
 }
-
+@media screen and (max-width: 767px) {
+  .contacts-list__item {
+    display: none;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .site-nav {
+    margin-left: 87px;
+  }
+}
 .current::after {
   content: "";
   position: absolute;
@@ -155,32 +170,52 @@ body {
   background-color: var(--accent-text-color);
 }
 
-.contacts-list {
-  display: flex;
-  margin-left: auto;
+@media screen and (max-width: 1199px) {
+  .contacts-list {
+    display: flex;
+    flex-direction: column;
+    margin-left: 96px;
+    gap: 10px;
+    margin-top: 21px;
+  }
+  .contacts-list__link {
+    display: flex;
+    align-items: center;
+    margin-right: 30px;
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contacts-list__link:hover, .contacts-list__link.link:focus {
+    color: var(--accent-text-color);
+  }
 }
-.contacts-list__link {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  display: flex;
-  align-items: center;
-  margin-right: 30px;
-  color: var(--title-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contacts-list__link:hover, .contacts-list__link.link:focus {
-  color: var(--accent-text-color);
+@media screen and (min-width: 1200px) {
+  .contacts-list {
+    display: flex;
+    margin-left: auto;
+  }
+  .contacts-list__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    display: flex;
+    align-items: center;
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contacts-list__link:hover, .contacts-list__link.link:focus {
+    color: var(--accent-text-color);
+  }
 }
 .contacts-list__item:not(:last-child) {
   margin-right: 50px;
-}
-
-.contacts-list__item {
-  display: none;
 }
 
 .mail-soc-icon {
@@ -194,6 +229,113 @@ body {
 .tel-soc-icon {
   fill: currentColor;
   margin-right: 10px;
+}
+
+.menu-btn {
+  display: inline-flex;
+  margin-left: auto;
+  padding: 0;
+  bottom: none;
+  background-color: transparent;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-btn {
+    display: none;
+  }
+}
+.mob-menu {
+  position: fixed;
+  top: 0;
+  background-color: var(--primery-white-color);
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  padding-top: 15px;
+}
+.mob-menu > .container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+}
+
+.close-menu-btn {
+  display: block;
+  margin-left: auto;
+  padding: 0px;
+  bottom: none;
+  background-color: transparent;
+}
+
+.close-menu-btn:hover,
+.close-menu-btn:focus {
+  color: var(--accent-text-color);
+}
+
+.mob-menu-nav {
+  margin-bottom: 50px;
+}
+
+.mob-menu-nav .current {
+  color: var(--accent-text-color);
+}
+
+.mob-menu-nav__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu-nav__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: var(--primery-text-color);
+}
+
+.contacts-mob-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.contacts-mob__link {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.contacts-mob-tel__link {
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: var(--accent-text-color);
+}
+
+.mob-soc-list {
+  display: flex;
+  margin-top: 64px;
+  margin-bottom: 48px;
+}
+
+.mob-soc-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  color: var(--accent-text-color);
+}
+
+.line {
+  width: 22px;
+  height: 0px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
 }
 
 .logo {
@@ -212,14 +354,24 @@ body {
 }
 
 .logo-footer {
-  display: inline-block;
+  display: block;
+  text-align: center;
   margin-bottom: 20px;
+}
+
+.logo-footer {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--accent-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .logo-footer {
+    display: inline-block;
+    margin-bottom: 20px;
+  }
 }
 
 .logo-footer .studio {
@@ -265,7 +417,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .hero {
-    max-width: 1200px;
+    max-width: 1600px;
     background-image: var(--bcg-hero-gradient), url(../images/hero-bcg-desktop.jpg);
   }
 }
@@ -292,7 +444,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .hero-title {
-    max-width: 696px;
+    width: 696px;
     font-size: 44px;
     line-height: 1.36;
   }
@@ -547,7 +699,16 @@ body {
 .footer-soc-list {
   display: flex;
   gap: 10px;
-  margin-top: 20px;
+}
+@media screen and (min-width: 480px) {
+  .footer-soc-list {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-soc-list {
+    margin-top: 0;
+  }
 }
 
 .footer-soc-item {
@@ -643,6 +804,10 @@ body {
 @media screen and (min-width: 1200px) {
   .team-item {
     width: calc((100% - 90px) / 4);
+    width: 270px;
+    height: 428px;
+    left: 215px;
+    top: 1632px;
   }
 }
 
@@ -723,15 +888,28 @@ body {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+@media screen and (min-width: 768px) {
+  .footer {
+    padding-top: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu-list {
+    padding-left: 0;
+  }
+  .menu-list.link {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
 
 .menu-list {
   padding-left: 0;
 }
-.menu-list .item:not(:last-child) {
-  margin-bottom: 9px;
-}
-.menu-list.link {
-  font-size: 14px;
+
+.menu-list .link {
+  font-style: 14px;
   line-height: 1.71;
 }
 
@@ -758,16 +936,65 @@ address .link:hover, address .link:focus {
   color: var(--accent-text-color);
 }
 
-.footer-thumb {
+.menu-list {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+}
+@media screen and (max-width: 1199px) {
+  .menu-list {
+    align-items: center;
+  }
 }
 
-.address-thumb {
-  margin-right: 70px;
+@media screen and (min-width: 1200px) {
+  .footer-thumb {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 1199px) {
+  .address-thumb {
+    margin-right: 70px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-thumb-tablet {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-thumb-tablet {
+    margin-bottom: 0;
+  }
+}
+
+.social-thumb {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+@media screen and (max-width: 767px) {
+  .social-thumb {
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .social-thumb {
+    align-items: flex-start;
+  }
 }
 
 .footer-text {
+  text-align: center;
   color: var(--primery-white-color);
   font-weight: 700;
   font-size: 14px;
@@ -775,16 +1002,37 @@ address .link:hover, address .link:focus {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+@media screen and (min-width: 1200px) {
+  .footer-text {
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-text {
+    color: var(--primery-white-color);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.1428571429;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+  }
+}
 
 .footer-input {
   background-color: var(--bg-footer-color);
   margin-top: 20px;
-  width: 358px;
+  width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   padding: 15px 16px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-input {
+    width: 358px;
+  }
 }
 .footer-input:focus {
   border: 1px solid var(--accent-text-color);
@@ -805,12 +1053,33 @@ address .link:hover, address .link:focus {
 
 .form-footer-thumb {
   display: flex;
-  align-items: flex-end;
-  gap: 12px;
+  align-items: center;
+  gap: 20px;
+}
+@media screen and (max-width: 1199px) {
+  .form-footer-thumb {
+    flex-direction: column;
+  }
 }
 
-.mailing-list-thumb {
-  margin-left: 93px;
+@media screen and (min-width: 1200px) {
+  .form-footer-thumb {
+    display: flex;
+    align-items: flex-end;
+    gap: 12px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .mailing-list-thumb {
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mailing-list-thumb {
+    margin-top: 0;
+    margin-left: 93px;
+  }
 }
 
 .text-overlay {
@@ -847,14 +1116,20 @@ address .link:hover, address .link:focus {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: var(--primery-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .backdrop.is-hidden .modal {
@@ -1036,11 +1311,24 @@ address .link:hover, address .link:focus {
 
 .page-list {
   display: flex;
-  margin-bottom: 50px;
-  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 40px;
 }
-.page-list.item {
-  margin-right: 8px;
+@media screen and (min-width: 768px) {
+  .page-list {
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .page-list {
+    display: flex;
+    margin-bottom: 50px;
+    justify-content: center;
+  }
+  .page-list.item {
+    margin-right: 8px;
+  }
 }
 
 .some-item:not(:last-child) {
@@ -1048,8 +1336,14 @@ address .link:hover, address .link:focus {
 }
 
 .portfolio-hero {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-hero {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .portfolio-title {
@@ -1067,9 +1361,28 @@ address .link:hover, address .link:focus {
   line-height: 1.87;
 }
 
+@media screen and (min-width: 768px) {
+  .web-subtitle {
+    margin-bottom: 36px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .web-subtitle {
+    margin-bottom: 0px;
+  }
+}
+
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    gap: 30px;
+    justify-content: flex-start;
+  }
 }
 
 .card-link {
@@ -1084,15 +1397,19 @@ address .link:hover, address .link:focus {
 }
 
 .portfolio-list .item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+  width: 100%;
 }
-.portfolio-list .item:nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: 768px) {
+  .portfolio-list .item {
+    width: 100%;
+    width: calc((100% - 30px) / 2);
+  }
 }
-.portfolio-list .item:nth-last-child(-n+3) {
-  margin-bottom: 0;
+@media screen and (min-width: 1200px) {
+  .portfolio-list .item {
+    width: 370px;
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .card-title {
