--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -15,8 +15,16 @@
 }
 
 .logo-footer {
-  display: inline-block;
+  display: block;
+  text-align: center;
   margin-bottom: 20px;
+}
+
+.logo-footer {
+  @include desktop {
+    display: inline-block;
+    margin-bottom: 20px;
+  }
 
   font-family: "Raleway";
   font-weight: 700;
