--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -37,9 +37,9 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 450px;
+  height: 609px;
 
-  width: 528px;
-  height: 581px;
   background-color: var(--primery-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -48,6 +48,10 @@
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include desktop {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .backdrop.is-hidden .modal {
