--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -39,14 +39,28 @@
 
 .site-nav {
   display: flex;
-  margin-left: 93px;
+  margin-left: 92px;
   &__item:not(:last-child) {
     margin-right: 50px;
   }
 }
 
-.site-nav__item {
-  display: none;
+@media screen and (max-width: 767px) {
+  .site-nav__link {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts-list__item {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .site-nav {
+    margin-left: 87px;
+  }
 }
 
 .current::after {
@@ -62,38 +76,64 @@
   background-color: var(--accent-text-color);
 }
 
-.contacts-list {
-  display: flex;
-  margin-left: auto;
-
-  &__link {
-    padding-top: 32px;
-    padding-bottom: 32px;
+@media screen and (max-width: 1199px) {
+  .contacts-list {
     display: flex;
-    align-items: center;
-    margin-right: 30px;
+    flex-direction: column;
+    margin-left: 96px;
+    gap: 10px;
+    margin-top: 21px;
 
-    color: var(--title-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+    &__link {
+      display: flex;
+      align-items: center;
+      margin-right: 30px;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      color: var(--title-text-color);
+      font-weight: 500;
+      font-size: 10px;
+      line-height: 1.14;
+      letter-spacing: 0.02em;
 
-    &:hover,
-    &.link:focus {
-      color: var(--accent-text-color);
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &.link:focus {
+        color: var(--accent-text-color);
+      }
+    }
+  }
+}
+
+.contacts-list {
+  @include desktop {
+    display: flex;
+    margin-left: auto;
+
+    &__link {
+      padding-top: 32px;
+      padding-bottom: 32px;
+      display: flex;
+      align-items: center;
+
+      color: var(--title-text-color);
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.02em;
+
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &.link:focus {
+        color: var(--accent-text-color);
+      }
     }
   }
 
   &__item:not(:last-child) {
     margin-right: 50px;
   }
-}
-
-.contacts-list__item {
-  display: none;
 }
 
 .mail-soc-icon {
