--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,10 +1,22 @@
 .page-list {
   display: flex;
-  margin-bottom: 50px;
-  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
 
-  &.item {
-    margin-right: 8px;
+  margin-bottom: 40px;
+
+  @include tablet {
+    justify-content: center;
+  }
+
+  @include desktop {
+    display: flex;
+    margin-bottom: 50px;
+    justify-content: center;
+
+    &.item {
+      margin-right: 8px;
+    }
   }
 }
 
@@ -13,8 +25,13 @@
 }
 
 .portfolio-hero {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @include desktop {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .portfolio-title {
@@ -32,9 +49,24 @@
   line-height: 1.87;
 }
 
+.web-subtitle {
+  @include tablet {
+    margin-bottom: 36px;
+  }
+  @include desktop {
+    margin-bottom: 0px;
+  }
+}
+
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  @include tablet {
+    gap: 30px;
+    justify-content: flex-start;
+  }
 }
 
 .card-link {
@@ -51,14 +83,23 @@
 }
 
 .portfolio-list .item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  &:nth-child(3n) {
-    margin-right: 0;
+  width: 100%;
+
+  @include tablet {
+    width: 100%;
+    width: calc((100% - 30px) / 2);
   }
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+  @include desktop {
+    width: 370px;
+    width: calc((100% - 60px) / 3);
+    // margin-bottom: 30px;
+    // margin-right: 30px;
+    // &:nth-child(3n) {
+    //   margin-right: 0;
+    // }
+    // &:nth-last-child(-n + 3) {
+    //   margin-bottom: 0;
+    // }
   }
 }
 
