--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./utils/mixin";
 
 @import "./components/page-header";
+@import "./components/mob-menu";
 @import "./components/logo";
 @import "./components/hero";
 @import "./components/button";
