--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,11 @@ body {
 .main__nav {
   display: flex;
 }
+@media screen and (max-width: 767px) {
+  .main__nav {
+    position: relative;
+  }
+}
 
 .site-nav__link {
   position: relative;
@@ -158,18 +163,19 @@ body {
     margin-left: 87px;
   }
 }
-.current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-text-color);
+@media screen and (min-width: 1200px) {
+  .current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-text-color);
+  }
 }
-
 @media screen and (max-width: 1199px) {
   .contacts-list {
     display: flex;
@@ -232,12 +238,12 @@ body {
 }
 
 .menu-btn {
-  display: inline-flex;
-  margin-left: auto;
+  position: absolute;
+  top: 25%;
+  right: 15px;
   padding: 0;
   bottom: none;
   background-color: transparent;
-  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -394,7 +400,7 @@ body {
 @media screen and (min-width: 1200px) {
   .hero {
     padding-top: 200px;
-    padding-bottom: 280px;
+    padding-bottom: 200px;
     min-height: 600px;
     max-width: 1600px;
   }
@@ -1022,7 +1028,7 @@ address .link:hover, address .link:focus {
 .footer-input {
   background-color: var(--bg-footer-color);
   margin-top: 20px;
-  width: 450px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -1032,6 +1038,11 @@ address .link:hover, address .link:focus {
 @media screen and (min-width: 1200px) {
   .footer-input {
     width: 358px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-input {
+    width: 450px;
   }
 }
 .footer-input:focus {
@@ -1281,13 +1292,18 @@ address .link:hover, address .link:focus {
 
 .text-checkbox {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.7142857143;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .text-checkbox {
+    font-size: 14px;
+  }
 }
 .text-checkbox span {
   width: 16px;
@@ -1329,10 +1345,6 @@ address .link:hover, address .link:focus {
   .page-list.item {
     margin-right: 8px;
   }
-}
-
-.some-item:not(:last-child) {
-  margin-right: 8px;
 }
 
 .portfolio-hero {
