--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -206,7 +206,10 @@
 
 .text-checkbox {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
+  @include desktop {
+    font-size: 14px;
+  }
   line-height: calc(24 / 14);
 
   letter-spacing: 0.03em;
