--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -11,6 +11,9 @@
 }
 
 .main__nav {
+  @media screen and (max-width: 767px) {
+    position: relative;
+  }
   display: flex;
 }
 
@@ -63,17 +66,18 @@
   }
 }
 
-.current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-text-color);
+@include desktop {
+  .current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-text-color);
+  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -83,20 +87,16 @@
     margin-left: 96px;
     gap: 10px;
     margin-top: 21px;
-
     &__link {
       display: flex;
       align-items: center;
       margin-right: 30px;
-
       color: var(--title-text-color);
       font-weight: 500;
       font-size: 10px;
       line-height: 1.14;
       letter-spacing: 0.02em;
-
       transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
       &:hover,
       &.link:focus {
         color: var(--accent-text-color);
@@ -109,7 +109,6 @@
   @include desktop {
     display: flex;
     margin-left: auto;
-
     &__link {
       padding-top: 32px;
       padding-bottom: 32px;
@@ -130,7 +129,6 @@
       }
     }
   }
-
   &__item:not(:last-child) {
     margin-right: 50px;
   }
